--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   another_flushbar: ^1.12.30
   webview_flutter: ^3.0.4
   flutter_pin_code_fields: ^2.2.0
+  # pin_code_fields: ^8.0.1
   circular_countdown_timer: ^0.2.2
   easy_stepper: ^0.8.4
   permission_handler: ^11.3.0
